v2.13.4 - xx xxx xxxx
---------------------
   - DPDK:
     * OVS validated with DPDK 19.11.6. It is recommended to use this version
       until further releases.

v2.13.3 - 10 Feb 2021
---------------------
   - Bug fixes
   - Security:
     * Fixed packet parsing vulnerability CVE-2020-35498.

v2.13.2 - 13 Jan 2021
---------------------
   - Bug fixes
   - LLDP:
     * Security fixes for CVE-2015-8011 and CVE-2020-27827.
   - IPsec:
     * Fixed support of strongswan 5.7+ in ovs-monitor-ipsec.
     * Add option '--no-cleanup' to allow ovs-monitor-ipsec to stop without
       tearing down IPsec tunnels.
     * Add option '--no-restart-ike-daemon' to allow ovs-monitor-ipsec to start
       without restarting ipsec daemon.
   - OVSDB:
     * New unixctl command 'ovsdb-server/memory-trim-on-compaction on|off'.
       If turned on, ovsdb-server will try to reclaim all the unused memory
       after every DB compaction back to OS.  Disabled by default.
     * Maximum backlog on RAFT connections limited to 500 messages or 4GB.
       Once threshold reached, connection is dropped (and re-established).
       Use the 'cluster/set-backlog-threshold' command to change limits.
     * Fixed SHA-1 hash computation for databases larger than 512 MB.
   - DPDK:
     * Fixed support of 'net_virtio' devices.

v2.13.1 - 30 Jul 2020
---------------------
   - Bug fixes
   - DPDK:
     * OVS validated with DPDK 19.11.2, due to the inclusion of fixes for
       CVE-2020-10722, CVE-2020-10723, CVE-2020-10724, CVE-2020-10725 and
       CVE-2020-10726, this DPDK version is strongly recommended to be used.

v2.13.0 - 14 Feb 2020
---------------------
   - OVN:
     * OVN has been removed from this repository. It now exists as a
       separate project. You can find it at
       https://github.com/ovn-org/ovn.git
   - Userspace datapath:
     * Add option to enable, disable and query TCP sequence checking in
       conntrack.
     * Add support for conntrack zone limits.